fixes home, pontos / modal quiz, rating

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,19 +19,22 @@
   </div>
   <ion-list lines="none" style="margin: 0 0 12px; padding: 0; ">
     <ion-list-header class="name-user">
-      <ion-label class="hello-user" style="font-size: 1rem;">Olá, {{ usuario.nome }} ;)</ion-label>
+      <ion-label class="hello-user" style="font-size: 1rem;">Olá, ;)</ion-label>
     </ion-list-header>
     <p class="text-list">Que tal descobrir um pouco mais sua cidade?</p>
     <hr style="height: 1px; border-width: 1px; margin: 10px;">
     <ion-row style="display: flex; justify-content: center;">
       <ion-col class="col-home">
-        <ion-button class="btn-default">Todas</ion-button>
+        <ion-button class="btn-default" style="--background: #D5E3F8!important; 
+          --color: #796F93!important;">Todas</ion-button>
       </ion-col>
       <ion-col class="col-home">
-        <ion-button class="btn-default">Próximos</ion-button>
+        <ion-button class="btn-default" style="--background: #D5E3F8!important; 
+          --color: #796F93!important;">Próximos</ion-button>
       </ion-col>
       <ion-col class="col-home">
-        <ion-button class="btn-default">Mais visitados</ion-button>
+        <ion-button class="btn-default" style="--background: #D5E3F8!important; 
+          --color: #796F93!important;">Mais visitados</ion-button>
       </ion-col>
     </ion-row>
     <ion-item>
