--- a/src/app/modal-quiz/modal-quiz.page.html
+++ b/src/app/modal-quiz/modal-quiz.page.html
@@ -1,11 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Quiz</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content class="font">
-  <div class="name">Quiz - Nome do Ponto</div>
+  <div class="name">Quiz - {{ ponto }}</div>
   <div class="question">Questão que será puxada do banco</div>
   <ion-list class="awnser">
     <ion-radio-group>        
