--- a/src/global.scss
+++ b/src/global.scss
@@ -29,6 +29,12 @@
     border-radius: 2rem;
 }
 
+.modal-wh {
+    --width: 85%;
+    --height: 85%;
+    --border-radius: 2rem;
+}
+
 .btn-default {
     --background: #00AAE2;
     --border-radius: 2rem;
