--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
   </div>
   <ion-list lines="none" style="margin: 0 0 12px; padding: 0; ">
     <ion-list-header class="name-user">
-      <ion-label class="hello-user" style="font-size: 1rem;">Olá, ;)</ion-label>
+      <ion-label class="hello-user" style="font-size: 1rem;">Olá, {{ userData.objeto.nome }} ;)</ion-label>
     </ion-list-header>
     <p class="text-list">Que tal descobrir um pouco mais sua cidade?</p>
     <hr style="height: 1px; border-width: 1px; margin: 10px;">
