--- a/src/app/modal-rating/modal-rating.page.html
+++ b/src/app/modal-rating/modal-rating.page.html
@@ -1,18 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Avaliação</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content class="font">
-  <div class="name">Avaliar - Nome do Ponto</div>
-  <div style="display: flex; justify-content: center;">
-    <div class="question" style="display: inline;">Conte-nos como foi sua experiência <div style="display: inline; color: #00AAE2;"> :)</div></div>
+  <div style="height: 54%;">
+    <div class="name">Avaliar - {{ ponto }}</div>
+    <div style="display: flex; justify-content: center;">
+      <div class="question" style="display: inline;">Conte-nos como foi sua experiência <div style="display: inline; color: #00AAE2;"> :)</div></div>
+    </div>
+    <div id="awnser">
+      <ion-textarea id="text" class="font" placeholder="Digite sua experiência" rows="4"></ion-textarea>
+    </div>
   </div>
-  <div id="awnser">
-    <ion-textarea id="text" class="font" placeholder="Digite sua experiência" rows="4"></ion-textarea>
-  </div>
-  <ion-row class="buttons">
+  <ion-row class="buttons" style="height: 28%;">
     <ion-row class="btns">
       <ion-button class="font" id="btn-ask">Confirmar</ion-button>
     </ion-row>
