photo side menu / map bottom / pages config & store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
     <ion-menu type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-title class="hello">Olá, {{ userData.objeto.nome }}</ion-title>
+          <ion-row>
+            <img style="max-width: 5rem; max-height: 100%; display: flex; border-radius: 50%; margin: 1rem;" src="../../assets/limdo.jpg"/>
+            <ion-title class="hello">Olá, {{ userData.objeto.nome }}</ion-title>
+          </ion-row>
         </ion-toolbar>
       </ion-header>
       <ion-content>
