--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -1,8 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-label (click)="close()">< Voltar</ion-label>
-  </ion-toolbar>
-</ion-header>
 <ion-content>
   <div #map></div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title (click)="close()">Voltar</ion-title>
+  </ion-toolbar>
+</ion-footer>
