swiper / img modal zoom

--- a/src/app/ponto-turistico/ponto-turistico.page.html
+++ b/src/app/ponto-turistico/ponto-turistico.page.html
@@ -18,14 +18,21 @@
   <ion-item style="--border-color: transparent">
     <div class="place">{{ point.nome }}</div>
   </ion-item>
-  <div *ngFor="let urls of urls; let i=index">
+
+  <ion-slides [options]="sliderOpts">
+    <ion-slide *ngFor="let img of [1,2,3]">
+      <img src="../../assets/shapes.svg" tappable (click)="openPreview(img)"/>
+    </ion-slide>
+  </ion-slides>
+
+  <!-- <div *ngFor="let urls of urls; let i=index">
     <div class="photo" *ngIf="i<=0">
       <img class="first-photo" src=""/>
     </div>
   </div>
   <ion-row style="padding-left: 10px; padding-right: 10px;">
     <ion-col *ngFor="let urls of urls" class="col-prov"><img id="img-prov" src=""/></ion-col>
-  </ion-row>
+  </ion-row> -->
   <div class="desc-ponto">Histórico</div>
   <div class="text">
     <p>
