--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
       <ion-header>
         <ion-toolbar>
           <ion-row>
-            <img style="max-width: 5rem; max-height: 100%; display: flex; border-radius: 50%; margin: 1rem;" src="../../assets/limdo.jpg"/>
+            <img style="max-width: 5rem; max-height: 100%; display: flex; border-radius: 50%; margin: 1rem;" [src]="userData.objeto.img"/>
+            <img style="max-width: 5rem; max-height: 100%; display: flex; border-radius: 50%; margin: 1rem;" *ngIf="userData.objeto.img==''" src="../../assets/user.png" />
             <ion-title class="hello">Olá, {{ userData.objeto.nome }}</ion-title>
           </ion-row>
         </ion-toolbar>
