slider / logout / sidemenu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,16 @@
     <ion-menu type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-row>
-            <img style="max-width: 5rem; max-height: 100%; display: flex; border-radius: 50%; margin: 1rem;" src="../../assets/limdo.jpg"/>
+          <ion-row *ngIf="userData != null">
+            <img style="max-width: 5rem; height: 5rem; display: flex; border-radius: 50%; margin: 1rem; object-fit: cover;" 
+              src="{{ userData.objeto.img }}"/>
             <ion-title class="hello">Olá, {{ userData.objeto.nome }}</ion-title>
           </ion-row>
         </ion-toolbar>
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+          <ion-menu-toggle auto-hide="true" *ngFor="let p of appPages">
             <ion-item style="--border-color: transparent;" [routerDirection]="'root'" [routerLink]="[p.url]">
               <ion-icon style="color: #00AAE2;" slot="start" [name]="p.icon"></ion-icon>
               <ion-label class="menu-list">
@@ -19,6 +20,12 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
+          <ion-item style="--border-color: transparent;" (click)="logout()" [routerDirection]="'root'">
+            <ion-icon style="color: #00AAE2;" slot="start" name="log-out"></ion-icon>
+            <ion-label class="menu-list">
+              Sair
+            </ion-label>
+          </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
