--- a/src/global.scss
+++ b/src/global.scss
@@ -35,6 +35,12 @@
     --border-radius: 2rem;
 }
 
+.modal-logout {
+    --width: 85%;
+    --height: 40%;
+    --border-radius: 2rem;
+}
+
 .btn-default {
     --background: #00AAE2;
     --border-radius: 2rem;
