--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,11 @@
         <ion-toolbar>
           <ion-row *ngIf="userData.objeto.img==''">
             <img style="max-width: 5rem; height: 5rem; display: flex; border-radius: 50%; margin: 1rem; object-fit: cover;" src="../../assets/user.png">
-            <ion-title class="hello">Olá, {{ userData.objeto.nome }}</ion-title>
+            <ion-title *ngIf="userData != null" class="hello">Olá, {{ userData.objeto.nome }}</ion-title>
           </ion-row>
           <ion-row *ngIf="userData.objeto.img !== null">
             <img style="max-width: 5rem; height: 5rem; display: flex; border-radius: 50%; margin: 1rem; object-fit: cover;" [src]="userData.objeto.img">
-            <ion-title class="hello">Olá, {{ userData.objeto.nome }}</ion-title>
+            <ion-title *ngIf="userData != null" class="hello">Olá, {{ userData.objeto.nome }}</ion-title>
           </ion-row>
         </ion-toolbar>
       </ion-header>
