--- a/src/app/store/store.page.html
+++ b/src/app/store/store.page.html
@@ -10,7 +10,6 @@
     </ion-row>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <div id="hello">Olá, {{ userData.objeto.nome }}</div>
   <div id="text">Aqui você pode consultar todos os nossos parceiros e trocar seus pontos por experiências incríveis.</div>
@@ -28,10 +27,10 @@
     <ion-col style="text-align: start;">PG Store</ion-col>
     <ion-col style="text-align: end; font-weight: normal;">Extrato de Pontos</ion-col>
   </ion-row>
-  <div style="margin: 1rem; display: flex; justify-content: center;">
-    <div class="benefits" *ngFor="let number of [0,1]">
+  <ion-row style="margin: 1rem; text-align: center; place-content: center;">
+    <ion-col class="benefits" *ngFor="let number of [0,1,2,3,4]">
       <img class="img-benefit" src="../../assets/trophy.png"/>
-      <div id="benefit">Lorem ipsum {{ number }}</div>
-    </div>
-  </div>
+      <ion-label id="benefit">Lorem ipsum {{ number }}</ion-label>
+    </ion-col>
+  </ion-row>
 </ion-content>
