Inicio da implementacao do Quizz

--- a/src/app/modal-quiz/modal-quiz.page.html
+++ b/src/app/modal-quiz/modal-quiz.page.html
@@ -1,33 +1,17 @@
 <ion-content class="font">
-  <div class="name">Quiz - {{ ponto }}</div>
-  <div class="question">Questão que será puxada do banco</div>
+  <div class="name">{{ ponto }}</div>
+  <div class="question">{{questao.texto}}</div>
   <ion-list class="awnser">
-    <ion-radio-group>        
-      <ion-item id="awnser">
-        <ion-radio class="radio-awnser" value="cord"></ion-radio>
-        <ion-label class="font-awnser">Cord</ion-label>
+    <ion-radio-group [(ngModel)]="alternativa">        
+      <ion-item *ngFor="let resposta of respostas " id="awnser">
+        <ion-radio class="radio-awnser" value="{{resposta.alternativa}}"  name="alternativa" ></ion-radio>
+        <ion-label class="font-awnser">{{resposta.alternativa}}</ion-label>
       </ion-item>
-  
-      <ion-item id="awnser">
-        <ion-radio class="radio-awnser" value="duesenberg"></ion-radio>
-        <ion-label class="font-awnser">Duesenberg</ion-label>
-      </ion-item>
-  
-      <ion-item id="awnser">
-        <ion-radio class="radio-awnser" value="hudson"></ion-radio>
-        <ion-label class="font-awnser">Hudson</ion-label>
-      </ion-item>
-  
-      <ion-item id="awnser">
-        <ion-radio class="radio-awnser" value="packard"></ion-radio>
-        <ion-label class="font-awnser">Packard</ion-label>
-      </ion-item>
-  
     </ion-radio-group>
   </ion-list>
   <ion-row class="buttons">
     <ion-row class="btns">
-      <ion-button class="font" id="btn-ask">Responder</ion-button>
+      <ion-button class="font" id="btn-ask" (click)="responder()">Responder</ion-button>
     </ion-row>
     <ion-row class="btns">
       <div id="btn-cancel" (click)="close()">Cancelar</div>
