evaluation function + search filters

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,11 +26,11 @@
     <ion-row style="display: flex; justify-content: center;">
       <ion-col class="col-home">
         <ion-button class="btn-default" style="--background: #D5E3F8!important; 
-          --color: #796F93!important;">Todas</ion-button>
+          --color: #796F93!important;" (click)="getPontos()">Todas</ion-button>
       </ion-col>
       <ion-col class="col-home">
         <ion-button class="btn-default" style="--background: #D5E3F8!important; 
-          --color: #796F93!important;">Próximos</ion-button>
+          --color: #796F93!important;" (click)="getPontosRank()">Próximos</ion-button>
       </ion-col>
       <ion-col class="col-home">
         <ion-button class="btn-default" style="--background: #D5E3F8!important; 
