filter creation + configuration page change

--- a/src/app/config/config.page.html
+++ b/src/app/config/config.page.html
@@ -25,7 +25,13 @@
     <ion-input class="input-cadastro" type="text" name="nome" placeholder="{{ userData.objeto.nome }}"></ion-input>
   </div>
   <div class="item-input">
+    <ion-input class="input-cadastro" type="text" name="nome" placeholder="{{ userData.objeto.cpf }}"></ion-input>
+  </div>
+  <div class="item-input">
     <ion-input class="input-cadastro" type="text" name="nome" placeholder="{{ userData.objeto.telefone }}"></ion-input>
+  </div>
+  <div class="item-input">
+    Pontos: {{ userData.objeto.pontos }}
   </div>
   <div class="item-input">
     <ion-label class="font" style="font-size: 14px;"><b>Distância de busca</b></ion-label>
