--- a/src/app/modal-image/modal-image.page.html
+++ b/src/app/modal-image/modal-image.page.html
@@ -24,7 +24,7 @@
   <ion-slides [options]="sliderOpts">
     <ion-slide>
       <div class="swiper-zoom-container" #slider>
-        <img src="../../assets/shapes.svg"/>
+        <img src="{{ img }}"/>
       </div>
     </ion-slide>
   </ion-slides>
